tone-generator (0.0.16) unstable; urgency=low

  * Statistics for streams
  * Command line options to adjust buffering settings

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 25 Jun 2009 13:00:00 +0300

tone-generator (0.0.15) unstable; urgency=low

  * Cloned a notification interface using rfc4733/indicator.
  * Fixing ausrv_destroy() to properly wind down and not causing an assertion.
  * Timeout for streams.
  * Yet another case hopefully fixed for reconecting to notoriously falling.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 25 Jun 2009 12:43:59 +0300

tone-generator (0.0.14) unstable; urgency=low

  * Further fixes to avoid crashes when pulseaudio is coming back and
    crashing again.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 28 May 2009 08:59:00 +0300

tone-generator (0.0.13) unstable; urgency=low

  * Run tonegen in 8kHz mode.
  * Flushing tones with infinite duartion (used for DTMF).

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Mon, 25 May 2009 13:44:01 +0300

tone-generator (0.0.12) unstable; urgency=low

  * flush on stream destroy is introduced for quicker stream shutdown
    (used for DTMF)
  * Fixes: NB#115804

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Tue, 12 May 2009 11:12:00 +0300

tone-generator (0.0.11) unstable; urgency=low

  * fixes for the crashes when pulseaudio goes away
  * Fixes: NB#109029 and NB#114380

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Fri, 08 May 2009 11:12:00 +0300

tone-generator (0.0.10) unstable; urgency=low

  * the (mostly debugging) outputs of tonegend are directed to /dev/null
  * Fixes: NB#110652

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Wed, 15 Apr 2009 17:38:00 +0200

tone-generator (0.0.9) unstable; urgency=low

  * Proper reconnection to PulseAudio server even if it is irresponsive,
    ie. the connection request timed out.
  * Fixes: NB#105640
  * Do not exit if the D-Bus system bus is gone. This fix eliminates the
    need to synchronize between D-Bus and tonegend during shutdown.