@@ -4,8 +4,8 @@ CFLAGS += -O0 -g3 -I$(top_srcdir)/src \
 
 bin_PROGRAMS = tonegend
 
-tonegend_SOURCES = dbusif.c ausrv.c stream.c tone.c indicator.c dtmf.c note.c \
-		   rfc4733.c interact.c notification.c main.c
+tonegend_SOURCES = dbusif.c ausrv.c stream.c tone.c envelop.c indicator.c \
+	           dtmf.c note.c rfc4733.c interact.c notification.c main.c
 
 tonegend_LDADD = -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0 \
 		 -lpulse -lpulse-mainloop-glib
