@@ -2,6 +2,7 @@ tone-generator (0.0.16) unstable; urgency=low
 
   * Statistics for streams
   * Command line options to adjust buffering settings
+  * Tone envelop functions to produce smooth ramp ups/downs
 
  -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 25 Jun 2009 13:00:00 +0300
 
